Ability to change authentication at the endpoint page.

--- a/app/views/authentications/_form.erb
+++ b/app/views/authentications/_form.erb
@@ -30,6 +30,11 @@
       </div>
     </div>
   </div>
+  
+  <div class="field">
+    <%= f.check_box :auth_default %>
+    <%= f.label 'Default?' %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
