--- a/app/views/endpoints/show.html.erb
+++ b/app/views/endpoints/show.html.erb
@@ -29,17 +29,21 @@
   <p><%= @endpoint.description %></p>
   
   <strong id="parameter-set-http-method"><%= @endpoint.parameter_sets.first.http_method %></strong> <%= @endpoint.url %><br />
-  <strong>Authentication:</strong> <%= @endpoint.authentication.blank? ? "none" : "#{@endpoint.authentication.auth_method} via #{@endpoint.authentication.name}" %>
+  <strong>Authentication:</strong>
+  <%= select_tag 'auth_set_selector', options_from_collection_for_select(@authentications, 'id', 'name', @auth_default.id), {:include_blank => 'None'} %>
   
-  <%= form_tag endpoints_explore_path, :method => :post, :id => "explore-form" do %>    
-    <% if @endpoint.authentication && @endpoint.authentication.auth_method == Authentication::METHODS[:basic] %>
+  <%= form_tag endpoints_explore_path, :method => :post, :id => "explore-form" do %>
+    <%= hidden_field_tag 'authentication_id', @auth_default.id, :id => "authentication_id",  %>
+    <div id="auth-set">
+    <% if @auth_default && @auth_default.auth_method == Authentication::METHODS[:basic] %>
       <%= hidden_field_tag 'auth', 'basic' %>
-      <%= hidden_field_tag 'username', @endpoint.authentication.username %>
-      <%= hidden_field_tag 'password', @endpoint.authentication.password %>
-    <% elsif @endpoint.authentication && @endpoint.authentication.auth_method == Authentication::METHODS[:oauth] %>
+      <%= hidden_field_tag 'username', @auth_default.username %>
+      <%= hidden_field_tag 'password', @auth_default.password %>
+    <% elsif @auth_default && @auth_default.auth_method == Authentication::METHODS[:oauth] %>
       <%= hidden_field_tag 'auth', 'oauth' %>
-      <%= hidden_field_tag 'token', @endpoint.authentication.oauth_token %>
+      <%= hidden_field_tag 'token', @auth_default.oauth_token %>
     <% end %>
+    </div>
     
     <%= hidden_field_tag 'url', @endpoint.url %>
     
@@ -55,7 +59,7 @@
     <% unless @endpoint.parameter_sets.empty? %>
     <div id="parameter-set-selection">
       <p>
-        <%= label_tag :parameter_set %>
+        <strong><%= label_tag 'Parameter Set:' %></strong>
         <%= select_tag 'parameter_set', options_from_collection_for_select(@endpoint.parameter_sets, 'id', 'name', 1) %>
         <span id="parameter-set-view"><%= link_to "View", parameter_set_path(@endpoint.parameter_sets.first) %></span>
         |
@@ -95,6 +99,10 @@
       <div id="explorer-loading" style="visibility: hidden;"><%= image_tag 'loading.gif' %></div>
     </div>
   <% end %>
+  
+  <div id="auth-sets">
+    <%= render :partial => "auth_set", :collection => @authentications, :as => :auth %>
+  </div>  
   
   <div id="parameter-sets">
     <%= render :partial => "parameter_set", :collection => @endpoint.parameter_sets, :as => :ps %>
