--- a/app/views/endpoints/show.html.erb
+++ b/app/views/endpoints/show.html.erb
@@ -28,7 +28,7 @@
 
   <p><%= @endpoint.description %></p>
   
-  <strong id="parameter-set-http-method"><%= @endpoint.parameter_sets.first.http_method %></strong> <%= @endpoint.url %><br />
+  <strong id="parameter-set-http-method"><%= @endpoint.parameter_sets.first.http_method unless @endpoint.parameter_sets.empty? %></strong> <%= @endpoint.url %><br />
   <strong>Authentication:</strong>
   <%= select_tag 'auth_set_selector', options_from_collection_for_select(@authentications, 'id', 'name', @auth_default.id), {:include_blank => 'None'} %>
   
@@ -56,7 +56,12 @@
       <% end %>
     </div>
     
-    <% unless @endpoint.parameter_sets.empty? %>
+    <% if @endpoint.parameter_sets.empty? %>
+    <p>
+      <strong><%= label_tag 'Parameter Set:' %></strong>
+      <%= link_to "New", new_endpoint_parameter_set_path(@endpoint) %>
+    </p>
+    <% else %>
     <div id="parameter-set-selection">
       <p>
         <strong><%= label_tag 'Parameter Set:' %></strong>
@@ -82,12 +87,14 @@
           <th>Example</th>
           <th>Description</th>
         </tr>
-      <% @endpoint.parameter_sets.first.response_members.each do |rm| %>
-        <tr>
-          <td><%= rm.name %></td>
-          <td><%= rm.example %></td>
-          <td><%= rm.description %></td>
-        </tr>
+      <% unless @endpoint.parameter_sets.empty? %>
+        <% @endpoint.parameter_sets.first.response_members.each do |rm| %>
+          <tr>
+            <td><%= rm.name %></td>
+            <td><%= rm.example %></td>
+            <td><%= rm.description %></td>
+          </tr>
+        <% end %>
       <% end %>
       </table>
     </div>
