Latest Magellan updates (requested by Jason)

--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -18,4 +18,6 @@
 <% end %>
 </ul>
 
+<%= link_to "Back to Main Page", root_path %>
+|
 <%= link_to "New Authentication", new_authentication_path %>
