--- a/app/views/endpoints/_parameter_set.erb
+++ b/app/views/endpoints/_parameter_set.erb
@@ -17,7 +17,7 @@
         <%= text_field_tag 'param-vals[]', p.example, :class => "form-beta" %>
        </td>
        <td>
-        <%= link_to "?", nil, :class => "description-toggle" %>
+        <%= link_to "", nil, :class => "description-toggle" %>
        </td>
        <td>
          <div style="display: none;"><%= p.description.blank? ? "(no description)" : p.description %></div>
@@ -43,7 +43,7 @@
         <%= text_field_tag 'header-vals[]', h.example, :class => "form-beta" %>
        </td>
        <td>
-        <%= link_to "?", nil, :class => "description-toggle" %>
+        <%= link_to "", nil, :class => "description-toggle" %>
        </td>
        <td>
          <div style="display: none;"><%= h.description.blank? ? "(no description)" : h.description %></div>
