--- a/app/views/global_parameters/index.html.erb
+++ b/app/views/global_parameters/index.html.erb
@@ -10,4 +10,6 @@
 <% end %>
 </ul>
 
+<%= link_to "Back to Main Page", root_path %>
+|
 <%= link_to "New Global Parameter", new_global_parameter_path %>
