--- a/app/views/global_parameters/index.html.erb
+++ b/app/views/global_parameters/index.html.erb
@@ -1,15 +1,19 @@
-<h1>Global Parameters</h1>
+<div class="page_container">
+  
+  <h2>Global Parameters</h2>
 
-<ul>
-<% @global_params.each do |gp| %>
-  <li>
-    <%= gp.name%> => <%= gp.value %>
-    <%= link_to "Edit", edit_global_parameter_path(gp) %>
-    <%= link_to "Delete", global_parameter_path(gp), :method => :delete, :confirm => "Are you sure?" %>
-  </li>
-<% end %>
-</ul>
+  <ul>
+  <% @global_params.each do |gp| %>
+    <li>
+      <%= gp.name%> => <%= gp.value %>
+      <%= link_to "Edit", edit_global_parameter_path(gp) %>
+      <%= link_to "Delete", global_parameter_path(gp), :method => :delete, :confirm => "Are you sure?" %>
+    </li>
+  <% end %>
+  </ul>
 
-<%= link_to "Back to Main Page", root_path %>
-|
-<%= link_to "New Global Parameter", new_global_parameter_path %>
+  <%= link_to "Back to Setup", root_path %>
+  |
+  <%= link_to "New Global Parameter", new_global_parameter_path %>
+
+</div>
