--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
 </head>
 <body>
   
+  <h1><%= link_to "Magellan - The API Explorer", root_path %></h1>
+  
   <p id="alert"><%= alert %></p>
   <p id="notice"><%= notice %></p>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
