--- a/app/views/parameter_sets/new.html.erb
+++ b/app/views/parameter_sets/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Parameter Set</h1>
+<div class="page_container">
+  
+  <h1>New Parameter Set</h1>
+  
+  <p><strong>Explain what a parameter set is, and the setup of params.</strong></p>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to "Cancel", endpoint_path(@endpoint) %>
+  <%= link_to "Back to Endpoint", endpoint_path(@endpoint) %>
+  
+</div>
