--- a/app/views/parameters/new.html.erb
+++ b/app/views/parameters/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Parameter</h1>
+<div class="page_container">
 
-<%= render 'form' %>
+  <h1>New Parameter</h1>
+  
+  <p><strong>Explain what a parameter is, again.</strong></p>
 
-<%= link_to "Cancel", parameter_set_path(@parameter_set) %>
+  <%= render 'form' %>
+
+  <%= link_to "Cancel", parameter_set_path(@parameter_set) %>
+
+</div>
