--- a/app/views/endpoints/new.html.erb
+++ b/app/views/endpoints/new.html.erb
@@ -1,5 +1,11 @@
-<h1><%= @group.name %> - New Endpoint</h1>
+<div class="page_container">
+  
+  <h1><%= @group.name %> - New Endpoint</h1>
+  
+  <p><strong>Reiterate what an endpoint is.</strong></p>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to "Cancel", group_path(@group) %>
+  <%= link_to "Cancel", group_path(@group) %>
+
+</div>
