--- a/app/views/global_parameters/index.html.erb
+++ b/app/views/global_parameters/index.html.erb
@@ -1,6 +1,12 @@
 <div class="page_container">
   
   <h2>Global Parameters</h2>
+  
+  <p><strong>Reiterate what these are.</strong></p>
+  
+  <%= link_to "Back to Setup", setup_path %>
+  |
+  <%= link_to "New Global Parameter", new_global_parameter_path %>
 
   <ul>
   <% @global_params.each do |gp| %>
@@ -11,9 +17,5 @@
     </li>
   <% end %>
   </ul>
-
-  <%= link_to "Back to Setup", root_path %>
-  |
-  <%= link_to "New Global Parameter", new_global_parameter_path %>
 
 </div>
