Disabled oauth selection when creating new auth schemes. Also, updated initial setup flow.

--- a/app/views/authentications/_form.erb
+++ b/app/views/authentications/_form.erb
@@ -8,7 +8,7 @@
 
   <div class="field">
     <%= f.label :auth_method %><br />
-    <%= f.select("auth_method", Authentication::METHODS) %>
+    <%= f.select("auth_method", Authentication::METHODS, { :disabled => ['oauth'] }) %>
   </div>
   
   <div id="authentication-method-select">
