--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,7 +4,7 @@
 
   <p><strong>Reiterate the purpose of groups.</strong></p>
   
-  <%= link_to "Back to Setup", root_path %>
+  <%= link_to "Back to Setup", setup_path %>
   |
   <%= link_to "New Group", new_group_path %>
 
