--- a/app/views/parameter_sets/show.html.erb
+++ b/app/views/parameter_sets/show.html.erb
@@ -58,7 +58,7 @@
       <li><%= link_to "Return to the #{@parameter_set.endpoint.name} endpoint", endpoint_path(@parameter_set.endpoint) %> to test the parameter set or define additional parameter sets</li>
       <li><%= link_to "Return to Endpoints", group_path(@parameter_set.endpoint.group) %> to define more for this grouping</li>
       <li><%= link_to "Return to Groups", groups_path %> to define additional groups</li>
-      <li><%= link_to "Return to Setup Summary", root_path %> if you are done defining endpoints entirely</li>
+      <li><%= link_to "Return to Setup", setup_path %> if you are done defining endpoints entirely</li>
     </ul>
   </p>
   <p>
