--- a/app/views/parameters/_form.erb
+++ b/app/views/parameters/_form.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="field">
     <%= f.label :p_type, "Parameter Type" %><br />
-    <%= f.radio_button :p_type, Parameter::TYPES[:parameter] %> Parameter<br />
+    <%= f.radio_button :p_type, Parameter::TYPES[:parameter] %> Standard<br />
     <%= f.radio_button :p_type, Parameter::TYPES[:header] %> Header
   </div>
   <div class="field">
