--- a/app/views/parameter_sets/new.html.erb
+++ b/app/views/parameter_sets/new.html.erb
@@ -1,11 +1,9 @@
 <div class="page_container">
   
-  <h1>New Parameter Set</h1>
-  
-  <p><strong>Explain what a parameter set is, and the setup of params.</strong></p>
+  <h1><%= @endpoint.name %> - New Parameter Set</h1>
 
   <%= render 'form' %>
 
-  <%= link_to "Back to Endpoint", endpoint_path(@endpoint) %>
+  <%= link_to "Back to Groups & Endpoint", groups_path %>
   
 </div>
