--- a/app/views/parameters/edit.html.erb
+++ b/app/views/parameters/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to "Cancel", parameter_set_path(@parameter_set) %>
+<%= link_to "Cancel", parameter_set_path(@parameter.parameter_set) %>
